@@ -249,10 +249,10 @@ name|supportedScheme
 argument_list|,
 name|authorityRequired
 argument_list|,
+name|getDefaultPortIfDefined
+argument_list|(
 name|theFsImpl
-operator|.
-name|getDefaultPort
-argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|fsImpl
@@ -275,6 +275,36 @@ operator|=
 name|getStatistics
 argument_list|()
 expr_stmt|;
+block|}
+comment|/**    * Returns the default port if the file system defines one.    * {@link FileSystem#getDefaultPort()} returns 0 to indicate the default port    * is undefined.  However, the logic that consumes this value expects to    * receive -1 to indicate the port is undefined, which agrees with the    * contract of {@link URI#getPort()}.    *    * @param theFsImpl file system to check for default port    * @return default port, or -1 if default port is undefined    */
+DECL|method|getDefaultPortIfDefined (FileSystem theFsImpl)
+specifier|private
+specifier|static
+name|int
+name|getDefaultPortIfDefined
+parameter_list|(
+name|FileSystem
+name|theFsImpl
+parameter_list|)
+block|{
+name|int
+name|defaultPort
+init|=
+name|theFsImpl
+operator|.
+name|getDefaultPort
+argument_list|()
+decl_stmt|;
+return|return
+name|defaultPort
+operator|!=
+literal|0
+condition|?
+name|defaultPort
+else|:
+operator|-
+literal|1
+return|;
 block|}
 annotation|@
 name|Override
