@@ -22,6 +22,22 @@ begin_import
 import|import static
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|CommonConfigurationKeysPublic
+operator|.
+name|FS_DEFAULT_NAME_KEY
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
 name|junit
 operator|.
 name|Assert
@@ -181,6 +197,34 @@ operator|.
 name|conf
 operator|.
 name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|AbstractFileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FileContext
 import|;
 end_import
 
@@ -1806,7 +1850,7 @@ name|conf
 operator|.
 name|set
 argument_list|(
-literal|"fs.default.name"
+name|FS_DEFAULT_NAME_KEY
 argument_list|,
 name|defaultUri
 operator|.
@@ -1952,7 +1996,7 @@ name|conf
 operator|.
 name|set
 argument_list|(
-literal|"fs.default.name"
+name|FS_DEFAULT_NAME_KEY
 argument_list|,
 literal|"file:///"
 argument_list|)
@@ -1984,6 +2028,161 @@ name|IllegalArgumentException
 name|e
 parameter_list|)
 block|{     }
+block|}
+annotation|@
+name|Test
+DECL|method|testWasbAsDefaultFileSystemHasNoPort ()
+specifier|public
+name|void
+name|testWasbAsDefaultFileSystemHasNoPort
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+try|try
+block|{
+name|testAccount
+operator|=
+name|AzureBlobStorageTestAccount
+operator|.
+name|createMock
+argument_list|()
+expr_stmt|;
+name|Configuration
+name|conf
+init|=
+name|testAccount
+operator|.
+name|getFileSystem
+argument_list|()
+operator|.
+name|getConf
+argument_list|()
+decl_stmt|;
+name|String
+name|authority
+init|=
+name|testAccount
+operator|.
+name|getFileSystem
+argument_list|()
+operator|.
+name|getUri
+argument_list|()
+operator|.
+name|getAuthority
+argument_list|()
+decl_stmt|;
+name|URI
+name|defaultUri
+init|=
+operator|new
+name|URI
+argument_list|(
+literal|"wasb"
+argument_list|,
+name|authority
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|FS_DEFAULT_NAME_KEY
+argument_list|,
+name|defaultUri
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|addResource
+argument_list|(
+literal|"azure-test.xml"
+argument_list|)
+expr_stmt|;
+name|FileSystem
+name|fs
+init|=
+name|FileSystem
+operator|.
+name|get
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|fs
+operator|instanceof
+name|NativeAzureFileSystem
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|1
+argument_list|,
+name|fs
+operator|.
+name|getUri
+argument_list|()
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|AbstractFileSystem
+name|afs
+init|=
+name|FileContext
+operator|.
+name|getFileContext
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|getDefaultFileSystem
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|afs
+operator|instanceof
+name|Wasb
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|1
+argument_list|,
+name|afs
+operator|.
+name|getUri
+argument_list|()
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|FileSystem
+operator|.
+name|closeAll
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
